be_fastapi/antlr/compiled_files/GuildFlowParser.py
# Generated from GuildFlow.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class GuildFlowParser ( Parser ):

    grammarFileName = "GuildFlow.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'SEND_MESSAGE'", "'REPLY_MESSAGE'", "'BAN_USER'", 
                     "'TIMEOUT_USER'", "'ADD_ROLE'", "'=='", "'!='", "'>'", 
                     "'<'", "'contains'", "'.'", "'TRUE'", "'FALSE'", "'WORKFLOW'", 
                     "'ON'", "'WHERE'", "'STATE'", "'IF'", "'ELSE'", "'ENTER_STATE'", 
                     "'SET'", "'EXTRACT'", "'FIELD'", "'AS'", "'ACTION'", 
                     "'COMPONENTS'", "'{'", "'}'", "'['", "']'", "'('", 
                     "')'", "':'", "','", "'='" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "WORKFLOW", "ON", "WHERE", 
                      "STATE", "IF", "ELSE", "ENTER_STATE", "SET", "EXTRACT", 
                      "FIELD", "AS", "ACTION", "COMPONENTS", "LBRACE", "RBRACE", 
                      "LBRACK", "RBRACK", "LPAREN", "RPAREN", "COLON", "COMMA", 
                      "EQ", "IDENTIFIER", "NUMBER", "STRING", "WS", "COMMENT" ]

    RULE_prog = 0
    RULE_definition = 1
    RULE_workflow_def = 2
    RULE_event_type = 3
    RULE_state_def = 4
    RULE_statement = 5
    RULE_action_statement = 6
    RULE_command = 7
    RULE_param = 8
    RULE_if_statement = 9
    RULE_condition = 10
    RULE_comparator = 11
    RULE_transition_statement = 12
    RULE_component_statement = 13
    RULE_component_element = 14
    RULE_component_type = 15
    RULE_component_prop = 16
    RULE_prop_key = 17
    RULE_set_statement = 18
    RULE_extract_statement = 19
    RULE_expr = 20
    RULE_variable = 21
    RULE_value = 22
    RULE_array_literal = 23
    RULE_object_literal = 24

    ruleNames =  [ "prog", "definition", "workflow_def", "event_type", "state_def", 
                   "statement", "action_statement", "command", "param", 
                   "if_statement", "condition", "comparator", "transition_statement", 
                   "component_statement", "component_element", "component_type", 
                   "component_prop", "prop_key", "set_statement", "extract_statement", 
                   "expr", "variable", "value", "array_literal", "object_literal" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    WORKFLOW=14
    ON=15
    WHERE=16
    STATE=17
    IF=18
    ELSE=19
    ENTER_STATE=20
    SET=21
    EXTRACT=22
    FIELD=23
    AS=24
    ACTION=25
    COMPONENTS=26
    LBRACE=27
    RBRACE=28
    LBRACK=29
    RBRACK=30
    LPAREN=31
    RPAREN=32
    COLON=33
    COMMA=34
    EQ=35
    IDENTIFIER=36
    NUMBER=37
    STRING=38
    WS=39
    COMMENT=40

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(GuildFlowParser.EOF, 0)

        def definition(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GuildFlowParser.DefinitionContext)
            else:
                return self.getTypedRuleContext(GuildFlowParser.DefinitionContext,i)


        def getRuleIndex(self):
            return GuildFlowParser.RULE_prog

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProg" ):
                return visitor.visitProg(self)
            else:
                return visitor.visitChildren(self)




    def prog(self):

        localctx = GuildFlowParser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_prog)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 51 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 50
                self.definition()
                self.state = 53 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==GuildFlowParser.WORKFLOW or _la==GuildFlowParser.STATE):
                    break

            self.state = 55
            self.match(GuildFlowParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DefinitionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def workflow_def(self):
            return self.getTypedRuleContext(GuildFlowParser.Workflow_defContext,0)


        def state_def(self):
            return self.getTypedRuleContext(GuildFlowParser.State_defContext,0)


        def getRuleIndex(self):
            return GuildFlowParser.RULE_definition

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDefinition" ):
                return visitor.visitDefinition(self)
            else:
                return visitor.visitChildren(self)




    def definition(self):

        localctx = GuildFlowParser.DefinitionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_definition)
        try:
            self.state = 59
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [GuildFlowParser.WORKFLOW]:
                self.enterOuterAlt(localctx, 1)
                self.state = 57
                self.workflow_def()
                pass
            elif token in [GuildFlowParser.STATE]:
                self.enterOuterAlt(localctx, 2)
                self.state = 58
                self.state_def()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Workflow_defContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WORKFLOW(self):
            return self.getToken(GuildFlowParser.WORKFLOW, 0)

        def IDENTIFIER(self):
            return self.getToken(GuildFlowParser.IDENTIFIER, 0)

        def ON(self):
            return self.getToken(GuildFlowParser.ON, 0)

        def event_type(self):
            return self.getTypedRuleContext(GuildFlowParser.Event_typeContext,0)


        def LBRACE(self):
            return self.getToken(GuildFlowParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(GuildFlowParser.RBRACE, 0)

        def WHERE(self):
            return self.getToken(GuildFlowParser.WHERE, 0)

        def condition(self):
            return self.getTypedRuleContext(GuildFlowParser.ConditionContext,0)


        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GuildFlowParser.StatementContext)
            else:
                return self.getTypedRuleContext(GuildFlowParser.StatementContext,i)


        def getRuleIndex(self):
            return GuildFlowParser.RULE_workflow_def

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWorkflow_def" ):
                return visitor.visitWorkflow_def(self)
            else:
                return visitor.visitChildren(self)




    def workflow_def(self):

        localctx = GuildFlowParser.Workflow_defContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_workflow_def)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 61
            self.match(GuildFlowParser.WORKFLOW)
            self.state = 62
            self.match(GuildFlowParser.IDENTIFIER)
            self.state = 63
            self.match(GuildFlowParser.ON)
            self.state = 64
            self.event_type()
            self.state = 67
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==GuildFlowParser.WHERE:
                self.state = 65
                self.match(GuildFlowParser.WHERE)
                self.state = 66
                self.condition()


            self.state = 69
            self.match(GuildFlowParser.LBRACE)
            self.state = 73
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << GuildFlowParser.IF) | (1 << GuildFlowParser.ENTER_STATE) | (1 << GuildFlowParser.SET) | (1 << GuildFlowParser.EXTRACT) | (1 << GuildFlowParser.ACTION) | (1 << GuildFlowParser.COMPONENTS))) != 0):
                self.state = 70
                self.statement()
                self.state = 75
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 76
            self.match(GuildFlowParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Event_typeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(GuildFlowParser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return GuildFlowParser.RULE_event_type

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEvent_type" ):
                return visitor.visitEvent_type(self)
            else:
                return visitor.visitChildren(self)




    def event_type(self):

        localctx = GuildFlowParser.Event_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_event_type)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 78
            self.match(GuildFlowParser.IDENTIFIER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class State_defContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STATE(self):
            return self.getToken(GuildFlowParser.STATE, 0)

        def IDENTIFIER(self):
            return self.getToken(GuildFlowParser.IDENTIFIER, 0)

        def LBRACE(self):
            return self.getToken(GuildFlowParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(GuildFlowParser.RBRACE, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GuildFlowParser.StatementContext)
            else:
                return self.getTypedRuleContext(GuildFlowParser.StatementContext,i)


        def getRuleIndex(self):
            return GuildFlowParser.RULE_state_def

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitState_def" ):
                return visitor.visitState_def(self)
            else:
                return visitor.visitChildren(self)




    def state_def(self):

        localctx = GuildFlowParser.State_defContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_state_def)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 80
            self.match(GuildFlowParser.STATE)
            self.state = 81
            self.match(GuildFlowParser.IDENTIFIER)
            self.state = 82
            self.match(GuildFlowParser.LBRACE)
            self.state = 86
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << GuildFlowParser.IF) | (1 << GuildFlowParser.ENTER_STATE) | (1 << GuildFlowParser.SET) | (1 << GuildFlowParser.EXTRACT) | (1 << GuildFlowParser.ACTION) | (1 << GuildFlowParser.COMPONENTS))) != 0):
                self.state = 83
                self.statement()
                self.state = 88
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 89
            self.match(GuildFlowParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def action_statement(self):
            return self.getTypedRuleContext(GuildFlowParser.Action_statementContext,0)


        def transition_statement(self):
            return self.getTypedRuleContext(GuildFlowParser.Transition_statementContext,0)


        def if_statement(self):
            return self.getTypedRuleContext(GuildFlowParser.If_statementContext,0)


        def set_statement(self):
            return self.getTypedRuleContext(GuildFlowParser.Set_statementContext,0)


        def extract_statement(self):
            return self.getTypedRuleContext(GuildFlowParser.Extract_statementContext,0)


        def component_statement(self):
            return self.getTypedRuleContext(GuildFlowParser.Component_statementContext,0)


        def getRuleIndex(self):
            return GuildFlowParser.RULE_statement

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = GuildFlowParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_statement)
        try:
            self.state = 97
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [GuildFlowParser.ACTION]:
                self.enterOuterAlt(localctx, 1)
                self.state = 91
                self.action_statement()
                pass
            elif token in [GuildFlowParser.ENTER_STATE]:
                self.enterOuterAlt(localctx, 2)
                self.state = 92
                self.transition_statement()
                pass
            elif token in [GuildFlowParser.IF]:
                self.enterOuterAlt(localctx, 3)
                self.state = 93
                self.if_statement()
                pass
            elif token in [GuildFlowParser.SET]:
                self.enterOuterAlt(localctx, 4)
                self.state = 94
                self.set_statement()
                pass
            elif token in [GuildFlowParser.EXTRACT]:
                self.enterOuterAlt(localctx, 5)
                self.state = 95
                self.extract_statement()
                pass
            elif token in [GuildFlowParser.COMPONENTS]:
                self.enterOuterAlt(localctx, 6)
                self.state = 96
                self.component_statement()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Action_statementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ACTION(self):
            return self.getToken(GuildFlowParser.ACTION, 0)

        def command(self):
            return self.getTypedRuleContext(GuildFlowParser.CommandContext,0)


        def COLON(self):
            return self.getToken(GuildFlowParser.COLON, 0)

        def param(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GuildFlowParser.ParamContext)
            else:
                return self.getTypedRuleContext(GuildFlowParser.ParamContext,i)


        def getRuleIndex(self):
            return GuildFlowParser.RULE_action_statement

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAction_statement" ):
                return visitor.visitAction_statement(self)
            else:
                return visitor.visitChildren(self)




    def action_statement(self):

        localctx = GuildFlowParser.Action_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_action_statement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 99
            self.match(GuildFlowParser.ACTION)
            self.state = 101
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==GuildFlowParser.COLON:
                self.state = 100
                self.match(GuildFlowParser.COLON)


            self.state = 103
            self.command()
            self.state = 107
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==GuildFlowParser.IDENTIFIER:
                self.state = 104
                self.param()
                self.state = 109
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CommandContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return GuildFlowParser.RULE_command

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCommand" ):
                return visitor.visitCommand(self)
            else:
                return visitor.visitChildren(self)




    def command(self):

        localctx = GuildFlowParser.CommandContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_command)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 110
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << GuildFlowParser.T__0) | (1 << GuildFlowParser.T__1) | (1 << GuildFlowParser.T__2) | (1 << GuildFlowParser.T__3) | (1 << GuildFlowParser.T__4))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(GuildFlowParser.IDENTIFIER, 0)

        def EQ(self):
            return self.getToken(GuildFlowParser.EQ, 0)

        def expr(self):
            return self.getTypedRuleContext(GuildFlowParser.ExprContext,0)


        def getRuleIndex(self):
            return GuildFlowParser.RULE_param

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParam" ):
                return visitor.visitParam(self)
            else:
                return visitor.visitChildren(self)




    def param(self):

        localctx = GuildFlowParser.ParamContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_param)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 112
            self.match(GuildFlowParser.IDENTIFIER)
            self.state = 113
            self.match(GuildFlowParser.EQ)
            self.state = 114
            self.expr()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class If_statementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self._statement = None # StatementContext
            self.then_block = list() # of StatementContexts
            self.else_block = list() # of StatementContexts

        def IF(self):
            return self.getToken(GuildFlowParser.IF, 0)

        def condition(self):
            return self.getTypedRuleContext(GuildFlowParser.ConditionContext,0)


        def LBRACE(self, i:int=None):
            if i is None:
                return self.getTokens(GuildFlowParser.LBRACE)
            else:
                return self.getToken(GuildFlowParser.LBRACE, i)

        def RBRACE(self, i:int=None):
            if i is None:
                return self.getTokens(GuildFlowParser.RBRACE)
            else:
                return self.getToken(GuildFlowParser.RBRACE, i)

        def ELSE(self):
            return self.getToken(GuildFlowParser.ELSE, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GuildFlowParser.StatementContext)
            else:
                return self.getTypedRuleContext(GuildFlowParser.StatementContext,i)


        def getRuleIndex(self):
            return GuildFlowParser.RULE_if_statement

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIf_statement" ):
                return visitor.visitIf_statement(self)
            else:
                return visitor.visitChildren(self)




    def if_statement(self):

        localctx = GuildFlowParser.If_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_if_statement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 116
            self.match(GuildFlowParser.IF)
            self.state = 117
            self.condition()
            self.state = 118
            self.match(GuildFlowParser.LBRACE)
            self.state = 122
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << GuildFlowParser.IF) | (1 << GuildFlowParser.ENTER_STATE) | (1 << GuildFlowParser.SET) | (1 << GuildFlowParser.EXTRACT) | (1 << GuildFlowParser.ACTION) | (1 << GuildFlowParser.COMPONENTS))) != 0):
                self.state = 119
                localctx._statement = self.statement()
                localctx.then_block.append(localctx._statement)
                self.state = 124
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 125
            self.match(GuildFlowParser.RBRACE)
            self.state = 135
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==GuildFlowParser.ELSE:
                self.state = 126
                self.match(GuildFlowParser.ELSE)
                self.state = 127
                self.match(GuildFlowParser.LBRACE)
                self.state = 131
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << GuildFlowParser.IF) | (1 << GuildFlowParser.ENTER_STATE) | (1 << GuildFlowParser.SET) | (1 << GuildFlowParser.EXTRACT) | (1 << GuildFlowParser.ACTION) | (1 << GuildFlowParser.COMPONENTS))) != 0):
                    self.state = 128
                    localctx._statement = self.statement()
                    localctx.else_block.append(localctx._statement)
                    self.state = 133
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 134
                self.match(GuildFlowParser.RBRACE)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConditionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GuildFlowParser.ExprContext)
            else:
                return self.getTypedRuleContext(GuildFlowParser.ExprContext,i)


        def comparator(self):
            return self.getTypedRuleContext(GuildFlowParser.ComparatorContext,0)


        def getRuleIndex(self):
            return GuildFlowParser.RULE_condition

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCondition" ):
                return visitor.visitCondition(self)
            else:
                return visitor.visitChildren(self)




    def condition(self):

        localctx = GuildFlowParser.ConditionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_condition)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 137
            self.expr()
            self.state = 138
            self.comparator()
            self.state = 139
            self.expr()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ComparatorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return GuildFlowParser.RULE_comparator

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitComparator" ):
                return visitor.visitComparator(self)
            else:
                return visitor.visitChildren(self)




    def comparator(self):

        localctx = GuildFlowParser.ComparatorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_comparator)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 141
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << GuildFlowParser.T__5) | (1 << GuildFlowParser.T__6) | (1 << GuildFlowParser.T__7) | (1 << GuildFlowParser.T__8) | (1 << GuildFlowParser.T__9))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Transition_statementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ENTER_STATE(self):
            return self.getToken(GuildFlowParser.ENTER_STATE, 0)

        def IDENTIFIER(self):
            return self.getToken(GuildFlowParser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return GuildFlowParser.RULE_transition_statement

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTransition_statement" ):
                return visitor.visitTransition_statement(self)
            else:
                return visitor.visitChildren(self)




    def transition_statement(self):

        localctx = GuildFlowParser.Transition_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_transition_statement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 143
            self.match(GuildFlowParser.ENTER_STATE)
            self.state = 144
            self.match(GuildFlowParser.IDENTIFIER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Component_statementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COMPONENTS(self):
            return self.getToken(GuildFlowParser.COMPONENTS, 0)

        def COLON(self):
            return self.getToken(GuildFlowParser.COLON, 0)

        def LBRACK(self):
            return self.getToken(GuildFlowParser.LBRACK, 0)

        def component_element(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GuildFlowParser.Component_elementContext)
            else:
                return self.getTypedRuleContext(GuildFlowParser.Component_elementContext,i)


        def RBRACK(self):
            return self.getToken(GuildFlowParser.RBRACK, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(GuildFlowParser.COMMA)
            else:
                return self.getToken(GuildFlowParser.COMMA, i)

        def getRuleIndex(self):
            return GuildFlowParser.RULE_component_statement

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitComponent_statement" ):
                return visitor.visitComponent_statement(self)
            else:
                return visitor.visitChildren(self)




    def component_statement(self):

        localctx = GuildFlowParser.Component_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_component_statement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 146
            self.match(GuildFlowParser.COMPONENTS)
            self.state = 147
            self.match(GuildFlowParser.COLON)
            self.state = 148
            self.match(GuildFlowParser.LBRACK)
            self.state = 149
            self.component_element()
            self.state = 154
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==GuildFlowParser.COMMA:
                self.state = 150
                self.match(GuildFlowParser.COMMA)
                self.state = 151
                self.component_element()
                self.state = 156
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 157
            self.match(GuildFlowParser.RBRACK)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Component_elementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def component_type(self):
            return self.getTypedRuleContext(GuildFlowParser.Component_typeContext,0)


        def LBRACE(self):
            return self.getToken(GuildFlowParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(GuildFlowParser.RBRACE, 0)
